# renewably-wind

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/python/: pyproject.toml
src/python/backend/: App.py  feature_engine.py  main.py  solarPanelPowerEstimator.py  test_feature_engine.py  windTurbinePowerEstimator.py
src/python/ml/data/enrich_checkpoints/: roads_complete_subset.parquet  transmission_complete_subset.parquet
src/python/ml/data/renewably_exports/: gee_features_3ee6714bee43_batch_0035.csv  gee_features_3ee6714bee43_batch_0036.csv  gee_features_3ee6714bee43_batch_0037.csv  gee_features_3ee6714bee43_batch_0038.csv  gee_features_3ee6714bee43_batch_0039.csv  gee_features_3ee6714bee43_batch_0040.csv  gee_features_3ee6714bee43_batch_0041.csv  gee_features_3ee6714bee43_batch_0042.csv  gee_features_3ee6714bee43_batch_0043.csv  gee_features_3ee6714bee43_batch_0044.csv  gee_features_3ee6714bee43_batch_0045.csv  gee_features_3ee6714bee43_batch_0046.csv  gee_features_3ee6714bee43_batch_0047.csv  gee_features_3ee6714bee43_batch_0048.csv  gee_features_3ee6714bee43_batch_0049.csv  gee_features_3ee6714bee43_batch_0050.csv  gee_features_3ee6714bee43_batch_0051.csv  gee_features_3ee6714bee43_batch_0052.csv  (+47 more)
src/python/ml/models/: inspect_models.py  upload_models.py  wind_v2_feature_columns.json
src/python/ml/notebooks/: solar_model_creation.ipynb  wind_model_creation.ipynb
src/python/ml/scripts/: download_res7_cache.py  enrich_h3_exog.py  export_res7_terrain.py  generate_res7_cells.py  pull_sollar_data_locations.py  steps_5_6_helper.py
(+24 files in other folders)
