[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "earthengine-api>=1.7.20",
    "fastapi>=0.115.0",
    "geopandas>=1.1.3",
    "h3>=4.3.1",
    "imbalanced-learn>=0.14.0",
    "joblib>=1.5.0",
    "modal>=1.0.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyshp>=2.3.1",
    "pydantic>=2.11.0",
    "requests>=2.33.1",
    "scipy>=1.16.2",
    "scikit-learn>=1.7.0",
    "torch>=2.11.0",
    "xgboost>=3.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
